--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     </head>
     <body>
         <h1>My Favorite Recipes!</h1>
+        <p>
+            <ul>
+                <li>Lasagna</li>
+                <li>Pizza</li>
+                <li>Hamburger</li>
+            </ul>
+        </p>
     </body>
 </html>
