--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -7,5 +7,8 @@
     <body>
         The recipe goes here. 
     </body>
+    <footer>
+        <a href="../index.html">Back</a>
+    </footer>
 
 </html>
