link to lasagna and back to index page added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>My Favorite Recipes!</h1>
         <p>
             <ul>
-                <li>Lasagna</li>
+                <li><a href="./pages/lasagna.html">Lasagna</a></li>
                 <li>Pizza</li>
                 <li>Hamburger</li>
             </ul>
