hamburger and pizza pages createt and ingradiens add to lasagna page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <p>
             <ul>
                 <li><a href="./pages/lasagna.html">Lasagna</a></li>
-                <li>Pizza</li>
-                <li>Hamburger</li>
+                <li><a href="./pages/pizza.html">Pizza</a></li>
+                <li><a href="./pages/hamburger.html">Hamburger</a></li>
             </ul>
         </p>
     </body>
+    <footer>All Rights Reserved</footer>
 </html>
