--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -5,7 +5,29 @@
         <title>Lasagna</title>
     </head>
     <body>
-        The recipe goes here. 
+        <h1>Classic Lasagna</h1>
+        <h2>Ingreadiens</h2>
+        <ul>
+            <li>2 onions</li>
+            <li>2 garlic</li>
+            <li>500 g minst meat</li>
+            <li>1 msk oil</li>
+            <li>4 msk tomato puré</li>
+            <li>1 tsk dried timjan</li>
+            <li>1 tsk dried rosmarin</li>
+            <li>390 g mashed tomate</li>
+            <li>1 köttbuljongtärning</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>9 dired lasagneplattor</li>
+        </ul>
+        <h2>Sås</h2>
+        <ul>
+            <li>6 msk butter</li>
+            <li>6 msk flour</li>
+            <li>10 dl milk</li>
+            <li>2 fl riven parmesan</li>
+        </ul>
     </body>
     <footer>
         <a href="../index.html">Back</a>
