translate lasanga recipe to english

--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -6,28 +6,29 @@
     </head>
     <body>
         <h1>Classic Lasagna</h1>
-        <h2>Ingreadiens</h2>
+        <h2>Ingredients</h2>
         <ul>
             <li>2 onions</li>
-            <li>2 garlic</li>
-            <li>500 g minst meat</li>
-            <li>1 msk oil</li>
-            <li>4 msk tomato puré</li>
-            <li>1 tsk dried timjan</li>
-            <li>1 tsk dried rosmarin</li>
-            <li>390 g mashed tomate</li>
-            <li>1 köttbuljongtärning</li>
+            <li>2 garlic cloves</li>
+            <li>500 g minced meat</li>
+            <li>1 tbsp oil</li>
+            <li>4 tbsp tomato purée</li>
+            <li>1 tsp dried thyme</li>
+            <li>1 tsp dried rosemary</li>
+            <li>390 g crushed tomatoes</li>
+            <li>1 beef bouillon cube</li>
             <li>Salt</li>
             <li>Pepper</li>
-            <li>9 dired lasagneplattor</li>
+            <li>9 dried lasagna sheets</li>
         </ul>
-        <h2>Sås</h2>
+        <h2>Sauce</h2>
         <ul>
-            <li>6 msk butter</li>
-            <li>6 msk flour</li>
-            <li>10 dl milk</li>
-            <li>2 fl riven parmesan</li>
+            <li>6 tbsp butter</li>
+            <li>6 tbsp flour</li>
+            <li>1 liter milk</li>
+            <li>2 dl grated Parmesan cheese</li>
         </ul>
+        
         <h2>How to do it</h2>
         <ol>
             <li>Preheat the oven to 175°C (347°F).</li>
