Ingredienst added to the hamburger page

--- a/pages/hamburger.html
+++ b/pages/hamburger.html
@@ -5,7 +5,27 @@
         <title>Hamburger</title>
     </head>
     <body>
-        The recipe goes here. 
+        <h1>Hamburger</h1>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>600 g ground beef</li>
+            <li>1 tsp salt</li>
+            <li>2 pinches black pepper</li>
+            <li>2 tbsp Dijon mustard</li>
+            <li>2 tbsp butter</li>
+            <li>2 tbsp oil</li>
+            <li>(optional) 8 slices of cheese</li>
+            <li>2 tomatoes</li>
+            <li>1 red onion</li>
+            <li>4 hamburger buns</li>
+            <li>4 lettuce leaves</li>
+            <li>Burger dressing</li>
+        </ul>
+
+        <h2>How to do it</h2>
+        <ol>
+            <li></li>
+        </ol>
     </body>
     <footer>
         <a href="../index.html">Back</a>
