step for the hamburger and image added

--- a/pages/hamburger.html
+++ b/pages/hamburger.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Hamburger</h1>
+        <img src="../img/hamburger.jpg" alt="A hamburger" height="512" width="512">
         <h2>Ingredients</h2>
         <ul>
             <li>600 g ground beef</li>
@@ -24,7 +25,10 @@
 
         <h2>How to do it</h2>
         <ol>
-            <li></li>
+            <li>Mix the ground meat with salt, pepper, and Dijon mustard. Moisten your hands and shape 4 hamburgers (for 4 servings).</li>
+            <li>Fry the hamburgers in butter and oil for 2-3 minutes on each side. If desired, add cheese when flipping the burgers.</li>
+            <li>Slice the tomatoes. Peel and thinly slice the onion.</li>
+            <li>Serve the hamburgers with bread, lettuce, tomatoes, onion, and preferably burger dressing and French fries (see the tip box for a recipe).</li>
         </ol>
     </body>
     <footer>
