image for the lasagna added

--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Classic Lasagna</h1>
+        <img src="../img/lasagna.jpg" alt="A Lasagna" width="512" height="512">
         <h2>Ingredients</h2>
         <ul>
             <li>2 onions</li>
