--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -5,7 +5,47 @@
         <title>Pizza</title>
     </head>
     <body>
-        The recipe goes here. 
+        <h1>Pizza</h1>
+        <img src="../img/pizza.jpg" alt="A pizza" height="350" width="350">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>8 personal pizzas</li>
+            <li>50 g yeast</li>
+            <li>3 dl water</li>
+            <li>8 dl wheat flour</li>
+            <li>2 tbsp oil</li>
+            <li>1 1/2 tsp salt</li>
+        </ul>
+            
+        <h2>Tomato Sauce</h2>
+        <ul>
+            <li>500 g crushed tomatoes</li>
+            <li>2 tbsp tomato paste</li>
+            <li>1 tsp sugar</li>
+            <li>1/2 tsp salt</li>
+            <li>Freshly ground black pepper</li>
+        </ul>
+            
+        <h2>Topping</h2>
+        <ul>
+            <li>8 dl shredded cheese</li>
+            <li>Cooked shredded ham</li>
+            <li>Fried shredded bacon</li>
+            <li>Sliced salami</li>
+            <li>Tuna</li>
+            <li>Shrimp</li>
+            <li>Mussels</li>
+            <li>Onion rings</li>
+            <li>Mushrooms</li>
+            <li>Grilled bell pepper</li>
+            <li>Marinated artichoke hearts</li>
+            <li>Pepperoncini</li>
+            <li>Pineapple rings</li>
+            <li>Olives</li>
+            <li>Mozzarella</li>
+            <li>Feta cheese</li>
+            <li>Leftover Bolognese sauce</li>
+        </ul>
     </body>
     <footer>
         <a href="../index.html">Back</a>
