Pizza page updated

--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -46,6 +46,21 @@
             <li>Feta cheese</li>
             <li>Leftover Bolognese sauce</li>
         </ul>
+
+        <h2>How to do it</h2>
+        <ol>
+            <li>Crumble the yeast into a bowl. Dissolve the yeast in a small amount of water, then add the remaining water. Stir in the flour, oil, and salt.</li>
+            <li>Knead the dough until smooth. Let it rise until doubled in size, about 40 minutes.</li>
+            <li>Preheat the oven to 250°C.</li>
+            <li>Divide the dough into eight equal parts (for 8 pizzas). Knead each portion and let them rise for another 10 minutes.</li>
+            <li>Roll out each piece into a round pizza base on baking paper, about 20 cm in diameter and 2 mm thick.</li>
+            <li><strong>Tomato Sauce:</strong> Bring the crushed tomatoes to a boil with the remaining tomato sauce ingredients. Leftover tomato sauce can be used in soups, stews, or Bolognese sauce, so save it!</li>
+            <li>Spread the tomato sauce and sprinkle cheese on top. About 2 1/2 tbsp of tomato sauce and 1 dl of grated cheese per pizza is ideal.</li>
+            <li>Let everyone choose their own toppings (about 1 1/2 dl topping per pizza is ideal). Drizzle 1 tsp of olive oil over the toppings.</li>
+            <li>Heat a baking sheet in the hot oven and transfer the first pizza onto it using the baking paper.</li>
+            <li>Bake the pizzas at the top of the oven for a few minutes. Remove the baking paper with the finished pizza and quickly transfer the next pizza onto the baking sheet. Repeat with all the pizzas.</li>
+        </ol>
+        
     </body>
     <footer>
         <a href="../index.html">Back</a>
