--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             My Favorite Recipes
         </title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <h1>My Favorite Recipes!</h1>
