started using mey new knowleadge about css to make my webpage bette

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
+        <div class="content">
         <h1>My Favorite Recipes!</h1>
         <p>
             <ul>
@@ -16,5 +17,6 @@
                 <li><a href="./pages/hamburger.html">Hamburger</a></li>
             </ul>
         </p>
+        </div>
     </body>
 </html>
