--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -6,40 +6,42 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        <h1>Classic Lasagna</h1>
-        <img src="../img/lasagna.jpg" alt="A Lasagna" width="512" height="512">
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 onions</li>
-            <li>2 garlic cloves</li>
-            <li>500 g minced meat</li>
-            <li>1 tbsp oil</li>
-            <li>4 tbsp tomato purée</li>
-            <li>1 tsp dried thyme</li>
-            <li>1 tsp dried rosemary</li>
-            <li>390 g crushed tomatoes</li>
-            <li>1 beef bouillon cube</li>
-            <li>Salt</li>
-            <li>Pepper</li>
-            <li>9 dried lasagna sheets</li>
-        </ul>
-        <h2>Sauce</h2>
-        <ul>
-            <li>6 tbsp butter</li>
-            <li>6 tbsp flour</li>
-            <li>1 liter milk</li>
-            <li>2 dl grated Parmesan cheese</li>
-        </ul>
-        
-        <h2>How to do it</h2>
-        <ol>
-            <li>Preheat the oven to 175°C (347°F).</li>
-            <li>Peel and chop the onion and garlic. Sauté the ground meat, onion, and garlic in oil in a frying pan. Add the tomato paste and let it cook with the meat. Season with thyme and rosemary. Add the crushed tomatoes and the bouillon cube, then let it simmer for about 10 minutes. Season with salt and pepper to taste.</li>
-            <li><strong>Sauce:</strong> Melt the butter and stir in the flour. Gradually add the milk while whisking. Let the sauce simmer for about 5 minutes, stirring occasionally. Stir in the Parmesan cheese and season with salt and pepper.</li>
-            <li>Layer the sauce, lasagna sheets, and meat sauce in an ovenproof dish (about 20 x 30 cm). Finish with the cheese sauce.</li>
-            <li>Place the lasagna in the middle of the oven and bake for about 40 minutes (or follow the cooking time on the lasagna sheet package).</li>
-            <li><strong>To serve:</strong> Serve the lasagna with a salad.</li>
-        </ol>
+        <div class="content">
+            <h1>Classic Lasagna</h1>
+            <img src="../img/lasagna.jpg" alt="A Lasagna" width="512" height="512">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 onions</li>
+                <li>2 garlic cloves</li>
+                <li>500 g minced meat</li>
+                <li>1 tbsp oil</li>
+                <li>4 tbsp tomato purée</li>
+                <li>1 tsp dried thyme</li>
+                <li>1 tsp dried rosemary</li>
+                <li>390 g crushed tomatoes</li>
+                <li>1 beef bouillon cube</li>
+                <li>Salt</li>
+                <li>Pepper</li>
+                <li>9 dried lasagna sheets</li>
+            </ul>
+            <h2>Sauce</h2>
+            <ul>
+                <li>6 tbsp butter</li>
+                <li>6 tbsp flour</li>
+                <li>1 liter milk</li>
+                <li>2 dl grated Parmesan cheese</li>
+            </ul>
+            
+            <h2>How to do it</h2>
+            <ol>
+                <li>Preheat the oven to 175°C (347°F).</li>
+                <li>Peel and chop the onion and garlic. Sauté the ground meat, onion, and garlic in oil in a frying pan. Add the tomato paste and let it cook with the meat. Season with thyme and rosemary. Add the crushed tomatoes and the bouillon cube, then let it simmer for about 10 minutes. Season with salt and pepper to taste.</li>
+                <li><strong>Sauce:</strong> Melt the butter and stir in the flour. Gradually add the milk while whisking. Let the sauce simmer for about 5 minutes, stirring occasionally. Stir in the Parmesan cheese and season with salt and pepper.</li>
+                <li>Layer the sauce, lasagna sheets, and meat sauce in an ovenproof dish (about 20 x 30 cm). Finish with the cheese sauce.</li>
+                <li>Place the lasagna in the middle of the oven and bake for about 40 minutes (or follow the cooking time on the lasagna sheet package).</li>
+                <li><strong>To serve:</strong> Serve the lasagna with a salad.</li>
+            </ol>
+        </div>
     </body>
     <footer>
         <a href="../index.html">Back</a>
