--- a/pages/hamburger.html
+++ b/pages/hamburger.html
@@ -6,31 +6,33 @@
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        <h1>Hamburger</h1>
-        <img src="../img/hamburger.jpg" alt="A hamburger" height="512" width="512">
-        <h2>Ingredients</h2>
-        <ul>
-            <li>600 g ground beef</li>
-            <li>1 tsp salt</li>
-            <li>2 pinches black pepper</li>
-            <li>2 tbsp Dijon mustard</li>
-            <li>2 tbsp butter</li>
-            <li>2 tbsp oil</li>
-            <li>(optional) 8 slices of cheese</li>
-            <li>2 tomatoes</li>
-            <li>1 red onion</li>
-            <li>4 hamburger buns</li>
-            <li>4 lettuce leaves</li>
-            <li>Burger dressing</li>
-        </ul>
+        <div class="content">
+            <h1>Hamburger</h1>
+            <img src="../img/hamburger.jpg" alt="A hamburger" height="512" width="512">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>600 g ground beef</li>
+                <li>1 tsp salt</li>
+                <li>2 pinches black pepper</li>
+                <li>2 tbsp Dijon mustard</li>
+                <li>2 tbsp butter</li>
+                <li>2 tbsp oil</li>
+                <li>(optional) 8 slices of cheese</li>
+                <li>2 tomatoes</li>
+                <li>1 red onion</li>
+                <li>4 hamburger buns</li>
+                <li>4 lettuce leaves</li>
+                <li>Burger dressing</li>
+            </ul>
 
-        <h2>How to do it</h2>
-        <ol>
-            <li>Mix the ground meat with salt, pepper, and Dijon mustard. Moisten your hands and shape 4 hamburgers (for 4 servings).</li>
-            <li>Fry the hamburgers in butter and oil for 2-3 minutes on each side. If desired, add cheese when flipping the burgers.</li>
-            <li>Slice the tomatoes. Peel and thinly slice the onion.</li>
-            <li>Serve the hamburgers with bread, lettuce, tomatoes, onion, and preferably burger dressing and French fries (see the tip box for a recipe).</li>
-        </ol>
+            <h2>How to do it</h2>
+            <ol>
+                <li>Mix the ground meat with salt, pepper, and Dijon mustard. Moisten your hands and shape 4 hamburgers (for 4 servings).</li>
+                <li>Fry the hamburgers in butter and oil for 2-3 minutes on each side. If desired, add cheese when flipping the burgers.</li>
+                <li>Slice the tomatoes. Peel and thinly slice the onion.</li>
+                <li>Serve the hamburgers with bread, lettuce, tomatoes, onion, and preferably burger dressing and French fries (see the tip box for a recipe).</li>
+            </ol>
+        </div>
     </body>
     <footer>
         <a href="../index.html">Back</a>
